# dr-clivi

./: .env.example  .gitignore  ADK_COMPLIANCE_REPORT.md  AGENT_MIGRATION_GUIDE.md  ARCHITECTURE_SOLID.md  ASK_AGENTS_BENEFITS.md  BACKEND_INTEGRATION_ANALYSIS.md  DEPLOYMENT.md  LICENSE  README.md  example_usage.py  migrate_dialogflow_pages.py  pyproject.toml  quick_ask_demo.py  quick_start.py  run.py  setup_credentials.py  telegram_logs.txt  telegram_main.py  test_adk_compliance.py  test_agents.py  test_dialogflow_flows.py  test_genai_simple.py  test_hybrid_architecture.py  test_optimization_comparison.py  test_telegram_local_real.py
docs/: INTEGRATION_FINAL_ANALYSIS.md  SETUP_GUIDE.md  implementation-summary.md
docs/analysis/: agent-config-analysis.md  executive-summary.md  flows-analysis.md  intents-entities-tools-analysis.md
docs/conversational-agents-export/: agent.json  diabetes-flow.md  obesity-flow.md  template-flujo.md
docs/conversational-agents-export/obesity-agent/: agent.json
dr_clivi/: __init__.py  agent.py  config.py  prompts.py
dr_clivi/agents/: __init__.py  ask_agent_comparison.py  ask_agent_migration_guide.py  ask_ai_agent.py  base_agent.py  coordinator.py  diabetes_agent.py  diabetes_agent_clean.py  diabetes_agent_with_backend.py  modern_coordinator.py  modern_diabetes_agent.py  obesity_agent.py  obesity_agent_clean.py
dr_clivi/application/: __init__.py  page_router.py  patient_service.py  session_service.py
dr_clivi/core/: __init__.py  exceptions.py  interfaces.py
dr_clivi/domain/: __init__.py  entities.py  medical_validation.py
dr_clivi/flows/: __init__.py  appointment_pages.py  deterministic_handler.py  dialogflow_pages.py  dialogflow_pages_clean.py  dialogflow_pages_optimized.py  measurement_pages.py  page_renderer.py  page_types.py
dr_clivi/infrastructure/: __init__.py  database.py  patient_repository.py
dr_clivi/presentation/: page_renderer.py
dr_clivi/services/: __init__.py  backend_integration.py
dr_clivi/shared/: __init__.py  datetime_utils.py  validation_utils.py
dr_clivi/telegram/: api_client.py  endpoints.py  handler_optimized.py  message_formatter.py  telegram_handler.py
dr_clivi/tools/: __init__.py  clivi_tools.py  generative_ai.py  image_processing.py  messaging.py  whatsapp_tools.py
dr_clivi/webhook/: __init__.py  whatsapp_handler.py
examples/: demo_backend_integration.py
scripts/: telegram_polling.py
scripts/setup/: check_config.py  check_status.py  setup_ngrok.py  setup_telegram.py  setup_webhook_production.py
scripts/tools/: debug_intelligent_routing.py
tests/: test_ask_agents_telegram.py  test_telegram_bot.py  test_telegram_handler_unit.py  test_telegram_local_real.py
(+1375 files in other folders)
