[project]
name = "dr-clivi"
version = "0.1.0"
description = "Dr. Clivi - Multi-Agent Healthcare Assistant for Diabetes and Obesity flows via WhatsApp"
authors = [{ name = "Clivi Team", email = "dev@clivi.com" }]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = { extras = [
  "adk",
  "agent-engines",
], version = "^1.93.0" }
google-genai = "^1.9.0"
google-adk = "^1.0.0"
# A2A Protocol for agent communication
a2a-sdk = "^0.2.4"
# Core dependencies
pydantic = "^2.10.6"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
# WhatsApp/Messaging & Webhook server
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
httpx = "^0.25.2"
requests = "^2.32.3"
# Data handling
pandas = "^2.2.3"
# Healthcare/Medical specific
python-dateutil = "^2.9.0"
# Testing
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
# Development
black = "^25.1.0"
tabulate = "^0.9.0"
absl-py = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest-asyncio = "^0.26.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
